# ExoPlayer

./: .gitignore  .gitmodules  README.md  core_settings.gradle  gradle.properties  settings.gradle
demos/main/: build.gradle
demos/main/src/main/: AndroidManifest.xml
demos/main/src/main/assets/: media.exolist.json
extensions/ffmpeg/: build.gradle  ffmpeg_android_build.sh
extensions/ffmpeg/src/main/jni/: Android.mk  Application.mk
kc_extensions/: build.gradle  settings.gradle
kc_extensions/src/main/: AndroidManifest.xml
kc_extensions/src/main/java/com/karhick/android/kcextensions/: DefaultHttpDataSource.java  DefaultHttpDataSourceFactory.java  DemoUtils.java  StethoHttpDataSource.java
kc_extensions/src/main/java/com/karhick/android/kcextensions/stetho/: StethoUrlConnectionReporterImpl.java  URLConnectionInspectorHeaders.java  URLConnectionInspectorRequest.java  URLConnectionInspectorResponse.java  Util.java
kc_extensions/src/main/java/com/karthick/: Test.java
kc_extensions/src/main/java/com/karthick/android/exoplayer2/: DemoUtils.java
kc_extensions/src/main/java/com/karthick/android/exoplayer2/upstream/: DefaultHttpDataSource.java  DefaultHttpDataSourceFactory.java
kc_extensions/src/main/java/com/karthick/android/kcextensions/: DecoratedAudioSink.java  DefaultHttpDataSource.java  EBUR128.java  KCMediaCodecAudioRenderer.java  MediaCodecAudioRenderer.java
kc_extensions/src/main/java/com/karthick/android/kcextensions/annotation/: JNIVariable.java
kc_extensions/src/main/jni/: CMakeLists.txt  JEBUR128.c  JEBUR128.h  jni_handle.h
(+2 files in other folders)
